--- a/packages/index.html
+++ b/packages/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="/src/style.css" rel="stylesheet">
+
   <title>Ju Ribeiro | Portfolio</title>
 </head>
 
