feat: add a pre set variables and fonts that will be used to style the project.

--- a/packages/index.html
+++ b/packages/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+  </style>
 
   <title>Ju Ribeiro | Portfolio</title>
 </head>
