--- a/packages/index.html
+++ b/packages/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link href="/src/styles/index.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
   <!-- Google Fonts -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
   </style>
+
 
   <title>Ju Ribeiro | Portfolio</title>
 </head>
